--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -4,9 +4,9 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 # Website name
-title: Hugo Academic CV Theme
+title: Lawrence J. Liu
 # Website URL
-baseURL: 'https://example.com/'
+baseURL: 'https://lawrence-j-liu.github.io'
 
 ############################
 ## LANGUAGE
