--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -6,7 +6,7 @@
 # Website name
 title: Lawrence J. Liu
 # Website URL
-baseURL: 'https://lawrence-j-liu.github.io'
+baseURL: 'https://lawrence-j-liu.github.io/'
 
 ############################
 ## LANGUAGE
