--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,7 +10,7 @@ main:
   - name: Research
     url: /#papers
     weight: 11
-  #- name: Teaching
-  #  url: /#talks
-  #  weight: 12
+  - name: Teaching
+    url: /#talks
+    weight: 12
 
