--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -6,7 +6,7 @@
 # Appearance
 appearance:
   mode: system
-  color: emerald
+  color: zinc
 
 # SEO
 marketing:
@@ -31,11 +31,12 @@ header:
   navbar:
     enable: true
     blox: "navbar"
+    align: 'right'
     fixed_to_top: true
     show_search: true
     show_theme_chooser: true
     logo:
-      text: "Your Name"
+      text: "Lawrence J. Liu"
 
 # Site footer
 footer:
